# Hexagon

./: .gitignore  .~lock.Hexagon.ods#  Hexagon.ods  README.md
Hexagon/: CMakeLists.txt  ClickableGraphicsView.cpp  ClickableGraphicsView.h  Hexagon.pro  Hexagon.pro.user.1c5df91  Images.qrc  README.md  ai.cpp  ai.h  aimanager.cpp  aimanager.h  combatdialog.cpp  combatdialog.h  combatdialog.ui  customdialog.cpp  customdialog.h  fieldtype.cpp  fieldtype.h  headquarter.ui  headquarterdialog.cpp  headquarterdialog.h  hex.cpp  hex.h  hexitem.cpp  hexitem.h  hexitemsignalhelper.cpp  hexitemsignalhelper.h  hexmap.cpp  hexmap.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mapSizeDialog.ui  mapsizedialog.cpp  mapsizedialog.h  start_screen.ui  startscreen.cpp  startscreen.h  startscreen.ui  (+10 more)
Hexagon/Images/: Forest.aseprite  Forest_big.xcf  Hex_greem.aseprite  farmland_big.xcf  grid_big.xcf  mountain_big.xcf  sea_big.xcf
